updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a truck driver and family man</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Minnesota </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some of my hobbies are playing the guitar, working out, and snowboarding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To work in a way where I get to spend more time with my family</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Elk River, Minnesota</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like the problem solving along with learning types of code is intresting and fun </p>
     </section>
 
     <footer id="footer">
